add stats endpoint
