# internal/handler/core.go
@@ -1,55 +1,71 @@
 package handler
 
 import (
-	"encoding/base64"
+	"context"
 	"net/http"
-	"os"
-	"path/filepath"
-	"strings"
 
+	"github.com/Zogwine/Zogwine/internal/auth"
+	database "github.com/Zogwine/Zogwine/internal/database"
 	"github.com/Zogwine/Zogwine/internal/status"
 	"github.com/Zogwine/Zogwine/internal/util/srv"
 	"github.com/go-chi/chi/v5"
 )
 
 func SetupCore(r chi.Router, s *status.Status) {
-	usr := chi.NewRouter()
-	r.Mount("/core", usr)
-	usr.Get("/image/{id}", CoreImage(s))
+	core := chi.NewRouter()
+	r.Mount("/core", core)
+	core.Get("/statistic", GetStats(s))
 }
 
-func CoreImage(s *status.Status) http.HandlerFunc {
+type stats struct {
+	database.GetEpisodeStatRow
+	database.GetTVShowStatRow
+	database.GetMovieStatRow
+	TotalTime int64 `json:"totalTime"`
+}
+
+// GET core/statistic
+func GetStats(s *status.Status) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		id := chi.URLParam(r, "id")
-		if id != "" {
-			path := filepath.Join(s.Config.Server.CachePath, id)
-			if _, err := os.Stat(path); err == nil {
-				// if the file exists in the cache, return it
-				srv.SendFile(w, r, path, "image/jpeg")
-				return
-			}
-
-			// else, decode the base64 id
-			// make sure that the padding is correct
-			if i := len(id) % 4; i != 0 {
-				id += strings.Repeat("=", 4-i)
-			}
-			url, err := base64.StdEncoding.DecodeString(id)
-			if srv.IfError(w, r, err) {
-				return
-			}
-			surl := string(url)
-			// if this id is a valid url, return a 302
-			if surl[0:4] == "http" {
-				w.Header().Set("Location", surl)
-				w.WriteHeader(302)
-				return
-			}
-
-			// else, return a 404
-			srv.Error(w, r, 404, "Not Found")
+		token, err := auth.GetToken(r)
+		if srv.IfError(w, r, err) {
+			return
+		}
+		uid, err := auth.GetUserID(s, token)
+		if srv.IfError(w, r, err) {
 			return
 		}
 
+		var stat stats
+		ctx := context.Background()
+
+		epStats, err := s.DB.GetEpisodeStat(ctx, uid)
+		if srv.IfError(w, r, err) {
+			return
+		}
+		stat.EpisodeCount = epStats.EpisodeCount
+		stat.WatchedEpisode = epStats.WatchedEpisode
+		stat.WatchedEpisodeCount = epStats.WatchedEpisodeCount
+		stat.EpisodeTime = epStats.EpisodeTime
+
+		tvsStats, err := s.DB.GetTVShowStat(ctx, uid)
+		if srv.IfError(w, r, err) {
+			return
+		}
+		stat.TvsCount = tvsStats.TvsCount
+		stat.WatchedTvs = tvsStats.WatchedTvs
+
+		movStats, err := s.DB.GetMovieStat(ctx, uid)
+		if srv.IfError(w, r, err) {
+			return
+		}
+		stat.MovieCount = movStats.MovieCount
+		stat.WatchedMovie = movStats.WatchedMovie
+		stat.WatchedMovieCount = movStats.WatchedMovieCount
+		stat.MovieTime = movStats.MovieTime
+
+		stat.TotalTime = stat.EpisodeTime + stat.MovieTime
+
+		srv.JSON(w, r, 200, stat)
 	}
 }
